Solved issue where header logo stretches in Webkit

--- a/style.css
+++ b/style.css
@@ -115,8 +115,8 @@ nav {
 
 .nav__logo,
 .footer__logo {
+  width: 65%;
   max-width: 300px;
-  min-width: 100px;
   align-self: center;
 }
 
@@ -293,9 +293,14 @@ footer {
   font-size: 1.25rem;
 }
 
+.footer__logo {
+  margin-bottom: 1em;
+}
+
 @media (min-width: 600px) {
   .row {
     flex-direction: row;
+
     justify-content: space-between;
   }
 
@@ -327,6 +332,8 @@ footer {
   }
 
   .footer__logo {
+    margin: 0;
+    width: 30%;
     order: 2;
   }
 
@@ -402,7 +409,7 @@ footer {
   .nav-wrapper {
     position: relative;
     align-self: center;
-    width: 100%;
+    width: 30%;
     height: 100%;
   }
   .nav-wrapper::before,
